--- a/WebShop.WebUI/Views/CheckOut/Index.cshtml
+++ b/WebShop.WebUI/Views/CheckOut/Index.cshtml
@@ -11,55 +11,59 @@
     <div class="row">
         <div class="span12">
             <div class="accordion" id="accordion2">
-                @*checkout option*@
-                <div class="accordion-group">
-                    <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">Checkout Options</a>
-                    </div>
-                    <div id="collapseOne" class="accordion-body in collapse">
-                        <div class="accordion-inner">
-                            <div class="row-fluid">
-                                <div class="span6">
-                                    <h4>New Customer</h4>
-                                    <p>By creating an account you will be able to shop faster, be up to date on an order's status, and keep track of the orders you have previously made.</p>
-                                    <form action="#" method="post">
-                                        <fieldset>
-                                            <label class="radio" for="register">
-                                                <input type="radio" name="account" value="register" id="register" checked="checked">Register Account
-                                            </label>
-                                            <label class="radio" for="guest">
-                                                <input type="radio" name="account" value="guest" id="guest">Guest Checkout
-                                            </label>
-                                            <br>
-                                            <button class="btn btn-inverse" data-toggle="collapse" data-parent="#collapse2">Continue</button>
-                                        </fieldset>
-                                    </form>
-                                </div>
-                                <div class="span6">
-                                    <h4>Returning Customer</h4>
-                                    <p>I am a returning customer</p>
-                                    <form action="#" method="post">
-                                        <fieldset>
-                                            <div class="control-group">
-                                                <label class="control-label">Username</label>
-                                                <div class="controls">
-                                                    <input type="text" placeholder="Enter your username" id="username" class="input-xlarge">
+                @*checkout option //Todo if Not already login,  add the partial view from login page here with a redirect to checkout*@
+                @if (false)
+                {
+                    <div class="accordion-group">
+                        <div class="accordion-heading">
+                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">Checkout Options</a>
+                        </div>
+                        <div id="collapseOne" class="accordion-body in collapse">
+                            <div class="accordion-inner">
+                                <div class="row-fluid">
+                                    <div class="span6">
+                                        <h4>New Customer</h4>
+                                        <p>By creating an account you will be able to shop faster, be up to date on an order's status, and keep track of the orders you have previously made.</p>
+                                        <form action="#" method="post">
+                                            <fieldset>
+                                                <label class="radio" for="register">
+                                                    <input type="radio" name="account" value="register" id="register" checked="checked">Register Account
+                                                </label>
+                                                <label class="radio" for="guest">
+                                                    <input type="radio" name="account" value="guest" id="guest">Guest Checkout
+                                                </label>
+                                                <br>
+                                                <button class="btn btn-inverse" data-toggle="collapse" data-parent="#collapse2">Continue</button>
+                                            </fieldset>
+                                        </form>
+                                    </div>
+                                    <div class="span6">
+                                        <h4>Returning Customer</h4>
+                                        <p>I am a returning customer</p>
+                                        <form action="#" method="post">
+                                            <fieldset>
+                                                <div class="control-group">
+                                                    <label class="control-label">Username</label>
+                                                    <div class="controls">
+                                                        <input type="text" placeholder="Enter your username" id="username" class="input-xlarge">
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            <div class="control-group">
-                                                <label class="control-label">Password</label>
-                                                <div class="controls">
-                                                    <input type="password" placeholder="Enter your password" id="password" class="input-xlarge">
+                                                <div class="control-group">
+                                                    <label class="control-label">Password</label>
+                                                    <div class="controls">
+                                                        <input type="password" placeholder="Enter your password" id="password" class="input-xlarge">
+                                                    </div>
                                                 </div>
-                                            </div>
-                                            <button class="btn btn-inverse">Continue</button>
-                                        </fieldset>
-                                    </form>
+                                                <button class="btn btn-inverse">Continue</button>
+                                            </fieldset>
+                                        </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                }
+
                 @*Order Summary*@
                 <div class="accordion-group">
                     <div class="accordion-heading">
@@ -73,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                @*Billing address*@
+                @*Billing address  //Todo Fill this information from login page*@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">Account &amp; Billing Details</a>
@@ -183,7 +187,7 @@
                         </div>
                     </div>
                 </div>
-               @*confirm order*@
+                @*confirm order*@
                 <div class="accordion-group">
                     <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">Confirm Order</a>
