--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -61,7 +61,8 @@
                                             <ul>
                                                 <li><a href="./products.html">Membership</a></li>
                                                 <li><a href="./products.html">Product</a></li>
-                                                <li><a href="./products.html">Customer</a></li>
+                                                <li>@Html.ActionLink("Customer", "index", "User")</li>
+
                                             </ul>
                                         </li>
                                       
