--- a/WebShop.WebUI/Views/User/Index.cshtml
+++ b/WebShop.WebUI/Views/User/Index.cshtml
@@ -1,30 +1,38 @@
-﻿@model IEnumerable<WebShop.Core.Models.UserAccount>
+﻿@model IEnumerable<WebShop.WebUI.ViewModel.UserViewModel>
 
 @{
-    ViewBag.Title = "Index1";
+    ViewBag.Title = "Index";
 }
+<section class="header_text sub">
+    <img class="pageBanner" src="~/Content/images/banner/pageBanner.png" alt="New products">
 
-<h2>Index1</h2>
+</section>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
+
+
+    
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.CreateAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Password)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Email)
+        </th>
+        
+        <th>
+            @Html.DisplayNameFor(model => model.FirstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastName)
+        </th>
+        
+        <th>
+            @Html.DisplayNameFor(model => model.Phone)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.BirthDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Disabled)
         </th>
         <th></th>
     </tr>
@@ -32,24 +40,43 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.CreateAt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Password)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Email)
         </td>
+      
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.DisplayFor(modelItem => item.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.LastName)
+        </td>
+       
+        <td>
+            @Html.DisplayFor(modelItem => item.Phone)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.BirthDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Disabled , new { @disabled = "disabled" })
+        </td>
+        <td>
+
+            <a type="button" class="btn btn-info btn-lg" href="@Url.Action("Edit", new { id = item.Id })">
+                <span class="glyphicon glyphicon-pencil"></span>
+                <span>Edit</span>
+            </a>
+
+            <a type="button" class="btn btn-success" href="@Url.Action("Details", new { id = item.Id })">
+                <span class="glyphicon glyphicon-list"></span>
+                <span>Details</span>
+            </a>
+
+            <a type="button" class="btn btn-danger btn-lg" href="@Url.Action("Delete", new { id = item.Id })">
+                <span class="glyphicon glyphicon-trash"></span>
+                <span>Delete</span>
+            </a>
+
+            
         </td>
     </tr>
 }
