--- a/WebShop.WebUI/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/WebShop.WebUI/Views/Account/ExternalLoginConfirmation.cshtml
@@ -17,11 +17,36 @@
         Please enter a user name for this site below and click the Register button to finish
         logging in.
     </p>
-    <div class="form-group">
+    <div class="control-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
+        <div class="controls">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="control-group">
+        @Html.LabelFor(m => m.Phone, new { @class = "col-md-2 control-label" })
+        <div class="controls">
+            @Html.TextBoxFor(m => m.Phone, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Phone, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+    <div class="control-group">
+        @Html.LabelFor(m => m.BirthDate, new { @class = "col-md-2 control-label" })
+        <div class="controls">
+            @Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.BirthDate, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="control-group">
+        @Html.LabelFor(m => m.MembershipTypeId, new { @class = "col-md-2 control-label" })
+        <div class="controls">
+            @Html.DropDownListFor(m => m.MembershipTypeId, new SelectList(Model.MembershipTypes, "id", "name"), new { @class = "form-control" } )
+            @Html.ValidationMessageFor(m => m.MembershipTypeId, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
