--- a/WebShop.WebUI/Views/Account/Login.cshtml
+++ b/WebShop.WebUI/Views/Account/Login.cshtml
@@ -22,7 +22,7 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @style = "color: red" })
 
-               
+
 
 
                 <div class="control-group">
@@ -53,7 +53,7 @@
                     <div class="controls">
 
 
-                        <input type="submit" class="btn btn-success" value="Login"  id="login" />
+                        <input type="submit" class="btn btn-success" value="Login" id="login" />
 
 
 
@@ -73,7 +73,11 @@
             }
         </section>
     </div>
-
+    <div class="col-md-4">
+        <section id="socialLoginForm">
+            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+        </section>
+    </div>
 </div>
 <script type="text/javascript">
 
