--- a/WebShop.WebUI/Views/Manage/Index.cshtml
+++ b/WebShop.WebUI/Views/Manage/Index.cshtml
@@ -12,7 +12,7 @@
 
 <div>
     <hr />
-    <div class="form-stacked">
+    <div class="form-horizontal">
         <div class="form-border">
             <div class="form-group">
                 <div class="col-md-2"></div>
@@ -20,16 +20,16 @@
 
                     @if (Model.HasPassword)
                     {
-                        <a type="button" class="btn btn-sm btn-primary" href="@Url.Action("ChangePassword")">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                            <span>Change Password</span>
-                        </a> }
-                    else
-                    {
-                        <a type="button" class="btn btn-sm btn-primary" href="@Url.Action("SetPassword")">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                            <span>Create Password</span>
-                        </a>}
+        <a type="button" class="btn btn-sm btn-primary" href="@Url.Action("ChangePassword")">
+            <span class="glyphicon glyphicon-pencil"></span>
+            <span>Change Password</span>
+        </a> }
+    else
+    {
+<a type="button" class="btn btn-sm btn-primary" href="@Url.Action("SetPassword")">
+    <span class="glyphicon glyphicon-pencil"></span>
+    <span>Create Password</span>
+</a>}
                     &nbsp;&nbsp;
 
                     <a type="button" class="btn btn-sm btn-primary" href="@Url.Action("ManageLogins")">
@@ -38,42 +38,38 @@
                     </a>
                 </div>
             </div>
-
-
-
-
             <fieldset disabled>
-                <div class="control-group">
+                <div class="form-group">
                     @Html.LabelFor(m => m.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
                 </div>
-                <div class="control-group">
+                <div class="form-group">
                     @Html.LabelFor(m => m.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
                 </div>
-                <div class="control-group">
+                <div class="form-group">
                     @Html.LabelFor(m => m.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
                 </div>
-                <div class="control-group">
+                <div class="form-group">
                     @Html.LabelFor(m => m.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(m => m.Phone, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
                 </div>
-                <div class="control-group">
+                <div class="form-group">
                     @Html.LabelFor(m => m.BirthDate, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.BirthDate, "{0:MM/dd/yyyy}", new { @class = "form-control" })
                     </div>
                 </div>
-              
+               
             </fieldset>
             <br />
             <div class="col-md-offset-2">
