--- a/WebShop.WebUI/Views/ProductManager/Index.cshtml
+++ b/WebShop.WebUI/Views/ProductManager/Index.cshtml
@@ -27,6 +27,9 @@
             @Html.DisplayNameFor(model => model.Price)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Discount)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Category)
         </th>
         <th>
@@ -61,6 +64,9 @@
           </td>
           <td>
               @Html.DisplayFor(modelItem => item.Price)
+          </td>
+          <td>
+              @Html.DisplayFor(modelItem => item.Discount)
           </td>
           <td>
               @Html.DisplayFor(modelItem => item.Category)
