--- a/WebShop.WebUI/Views/Account/Login.cshtml
+++ b/WebShop.WebUI/Views/Account/Login.cshtml
@@ -1,53 +1,75 @@
 ﻿@using WebShop.WebUI.Models
 @model LoginViewModel
-@{
-    ViewBag.Title = "Log in";
-}
 
-<h2>@ViewBag.Title.</h2>
+
+<section class="header_text sub">
+    <img class="pageBanner" src="~/Content/images/banner/pageBanner.png" alt="New products">
+
+</section>
+
+
+
+<h4 class="title"><span class="text"><strong>Login</strong> Form</span></h4>
+
+
 <div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    <div class="span5">
+        <section id="main-content">
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-stacked", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
+
                 <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
+                @Html.ValidationSummary(true, "", new { @style = "color: red" })
+
+
+
+
+                <div class="control-group">
                     @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    <div class="controls">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "input-xlarge" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="control-group">
                     @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    <div class="controls">
+                        @Html.PasswordFor(m => m.Password, new { @class = "input-xlarge" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="control-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
+
+                        <div class="controls">
                             @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+
                         </div>
+                        @Html.LabelFor(m => m.RememberMe)
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                    <div class="controls">
+
+
+                        <input type="submit" class="btn btn-success" value="Login" id="login" />
+
+
+
+                        <input type="hidden" name="Register" value="Register" />
+                        <span>
+                            @Html.ActionLink("Register as a new user", "Register", null,
+                                               new { @class = "btn btn-success " })
+                        </span>
+
+
+
                     </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+                </div> <p>
+
                 </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
+
             }
         </section>
     </div>
@@ -57,7 +79,27 @@
         </section>
     </div>
 </div>
+<script type="text/javascript">
+    $('#login1').on('click', function (e) {
+        e.preventDefault();
+        var form = $(this).parents('form');
+        swal({
+            title: "Congratulations!!",
+            text: "",
+            type: "success",
+            confirmButtonColor: "#DD6B55",
+            confirmButtonText: "",
+            closeOnConfirm: false
+        }, function (isConfirm) {
+            if (isConfirm) form.submit();
+        });
+    });
 
+
+
+
+</script>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
