--- a/WebShop.WebUI/Views/Home/Contact.cshtml
+++ b/WebShop.WebUI/Views/Home/Contact.cshtml
@@ -3,10 +3,18 @@
     <iframe width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=stockholm%20city&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
 </section>       
 
-        <section class="header_text sub">
+
+
+       <section class="header_text sub">
             <img class="pageBanner" src="~/Content/images/banner/pageBanner.png" alt="New products">
             <h4><span>Contact Us</span></h4>
         </section>
+
+
+
+
+
+
         <section class="main-content">
             <div class="row">
                 <div class="span5">
@@ -26,6 +34,38 @@
                         </p>
                     </div>
                 </div>
+
+
+                @using (Html.BeginForm("Contact", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @id = "contact-form", role = "form" }))
+                {
+                    @Html.ValidationSummary()
+                    <fieldset>
+                        <div class="form-div-1">
+                            <label class="name">
+                                @Html.TextBoxFor(m => m.Name, new { @placeholder = "Name *", @type = "text" })
+                            </label>
+                        </div>
+                        <div class="form-div-2">
+                            <label class="email">
+                                @Html.TextBoxFor(m => m.Email, new { @placeholder = "Email Address *", @type = "email" })
+                            </label>
+                        </div>
+                        <div class="form-div-3">
+                            <label class="phone notRequired">
+                                @Html.TextBoxFor(m => m.Telephone, new { @placeholder = "Telephone Number", @type = "text" })
+                            </label>
+                        </div>
+                        <div>
+                            <label class="message">
+                                @Html.TextAreaFor(m => m.Message, new { @placeholder = "Message *" })
+                            </label>
+                        </div>
+                        <div class="button-wrapper">
+                            <input type="submit" value="Send" name="submit" class="button"> <input type="reset" value="Reset" name="MFReset" class="button"><span>* Required Fields</span>
+                        </div>
+                    </fieldset>
+                }
+
                 <div class="span7">
                     <p></p>
                     <form method="post" action="#">
