--- a/WebShop.WebUI/Views/ProductDetails/Index.cshtml
+++ b/WebShop.WebUI/Views/ProductDetails/Index.cshtml
@@ -16,7 +16,9 @@
                 <div class="row">
                     @*display product image and additional images for the same product*@
                     <div class="span4">
-                        <a href="@Model.product.Images.FirstOrDefault().Path" class="thumbnail" data-fancybox-group="group1" title="@Model.product.Name"><img src="@Model.product.Images.FirstOrDefault().Path" alt=""></a>
+                        <div class="img-magnifier-container">
+                            <a href="@Model.product.Images.FirstOrDefault().Path" class="thumbnail" data-fancybox-group="group1" title="@Model.product.Name"> <img id="myimage" src="@Model.product.Images.FirstOrDefault().Path"> </a>
+</div>
                         <ul class="thumbnails small">
                             @foreach (var image in Model.product.Images)
                             {
@@ -60,8 +62,8 @@
                             <form class="form-inline">
                                 <p>&nbsp;</p>
                                 <label>Qty:</label>
-                                @Html.TextBox("qty",null, new { type = "number", min = "1", max = "5", step = "1", @class = "span1", @Value = "1" })
-                                @Html.ValidationMessage( "", new { @class = "text-danger" })
+                                @Html.TextBox("qty", null, new { type = "number", min = "1", max = "5", step = "1", @class = "span1", @Value = "1" })
+                                @Html.ValidationMessage("", new { @class = "text-danger" })
                                 <p>&nbsp;</p>
                                 <label>Size:</label>
                                 <select name="Size" id="size" class="span2">
@@ -319,6 +321,12 @@
     </section>
 
     <script src="/Content/themes/js/common.js"></script>
+    <script>
+        /* Initiate Magnify Function
+        with the id of the image, and the strength of the magnifier glass:*/
+        magnify("myimage", 2);
+    </script>
+
     <script>
         $(function () {
             $('#myTab a:first').tab('show');
