--- a/WebShop.WebUI/Views/Order/MyOrders.cshtml
+++ b/WebShop.WebUI/Views/Order/MyOrders.cshtml
@@ -4,12 +4,39 @@
     ViewBag.Title = "MyOrders";
 }
 
+<style>
+  
+
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+
+    th, td {
+        padding: 15px;
+        text-align: left;
+    }
+
+    #t01 tr:nth-child(even) {
+        background-color: #eee;
+    }
+
+    #t01 tr:nth-child(odd) {
+        background-color: #fff;
+    }
+
+    #t01 th {
+        background-color: black;
+        color: white;
+    }
+</style>
+
 <h2>My Orders</h2>
 
 @foreach (var orderView in Model)
 {
     var item = orderView.Order;
-    <table class="table">
+    <table id="t01" class="table">
         <tr>
             <th>
                 Order Date
@@ -38,7 +65,6 @@
             <th>
                 Comment
             </th>
-            <th></th>
         </tr>
         <tr>
             <td>
