--- a/WebShop.WebUI/Views/Basket/BasketItemTable.cshtml
+++ b/WebShop.WebUI/Views/Basket/BasketItemTable.cshtml
@@ -1,44 +1,51 @@
 ﻿@model WebShop.Core.ViewModels.BasketItemViewModel
 
-    <table class="table table-striped">
-        <thead>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Image</th>
+            <th>Product Name</th>
+            <th>Quantity</th>
+            <th>Unit Price</th>
+            <th>Total</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.BasketItemDetail)
+        {
             <tr>
-                <th>Image</th>
-                <th>Product Name</th>
-                <th>Quantity</th>
-                <th>Unit Price</th>
-                <th>Total</th>
+                <td><a href="/ProductDetails/index/@item.ProdctId"><img class="img-thumbnail" alt="" width="50px" src="@item.Image"></a></td>
+                <td>@item.ProdctName</td>
+                <td>
+                    <input type="text" placeholder="@item.Quantity" class="input-mini" style="margin:0" readonly>
+                </td>
+                <td>@item.Price Kr</td>
+                <td>@(@item.Price * @item.Quantity) Kr</td>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.BasketItemDetail)
+        }
+        @if (Model.DiscountItem != null)
+        {
+            <tr>
+                <td>&nbsp;</td>
+                <td>@Model.DiscountItem.CouponName</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>-@Model.DiscountItem.Price Kr</td>
+            </tr>
+        }
+        <tr>
+            <td>&nbsp;</td>
+            <td>@Model.DeliveryMethod.Delivery Shipping</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            @if (Model.DeliveryMethod.Price == 0)
             {
-                <tr>
-                    <td><a href="/ProductDetails/index/@item.ProdctId"><img class="img-thumbnail" alt="" width="50px" src="@item.Image"></a></td>
-                    <td>@item.ProdctName</td>
-                    <td>
-                        <input type="text" placeholder="@item.Quantity" class="input-mini" style="margin:0" readonly>
-                    </td>
-                    <td>@item.Price Kr</td>
-                    <td>@(@item.Price * @item.Quantity) Kr</td>
-                </tr>
+                <td>Free</td>
             }
-            @if (Model.DiscountItem != null)
+            else
             {
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>@Model.DiscountItem.CouponName</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>-@Model.DiscountItem.Price Kr</td>
-                </tr>
+                <td> @Model.DeliveryMethod.Price Kr </td>
             }
-                <tr>
-                    <td>&nbsp;</td>
-                    <td>@Model.DeliveryMethod.Delivery Shipping</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>@Model.DeliveryMethod.Price Kr</td>
-                </tr>
-        </tbody>
-    </table>
+        </tr>
+    </tbody>
+</table>
