--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -55,9 +55,12 @@
 			<div class="span10">
                 <div class="account pull-right">
                     <ul class="user-menu">
-                        <li><a href="#">My Account</a></li>
+                        <li>
+                            <a href="/WishList/Index"><i class="far fa-heart"></i> Favourites</a>
+                        </li>
                         <li><a href="/Basket/Index">My Basket</a></li>
                         <li><a href="/Checkout/Index">Checkout</a></li>
+                        <li><a href="/Order/MyOrders">MyOrders</a></li>
                         <li> @Html.Partial("_LoginPartial")</li>
                         @{
                             Html.RenderAction("BasketSummary", "Basket");
