--- a/WebShop.WebUI/Views/WishList/Index.cshtml
+++ b/WebShop.WebUI/Views/WishList/Index.cshtml
@@ -34,6 +34,10 @@
                     </tbody>
                 </table>
             }
+            else
+            {
+                <div> No items in favourite !!</div>
+            }
 
         </div>
 </section>
